# animaltasksim

./: .gitattributes  .gitignore  AGENTS.md  CALIBRATION_GUIDE.md  CHANGELOG.md  CITATION.cff  DOCUMENTATION_SUMMARY.md  FINDINGS.md  HYBRID_AGENT_POSTMORTEM.md  LICENSE  NEXT_STEPS_PROMPT.md  PRD.md  PROJECT_TODO.md  README.md  RELEASE_NOTES.md  R_DDM_CALIBRATION_REPORT.md  STRATEGIC_ROADMAP.md  SUMMARY.md  analyze_rollout.py  count_actions.py  debug_ddm_rollout.py  debug_rollout.ndjson  kickoff_prompt.md  pyproject.toml  value_proposition.md
agents/: __init__.py  _init_utils.py  adaptive_control_agent.py  adaptive_control_config.py  adaptive_control_model.py  adaptive_control_trainer.py  bayes_observer.py  curriculum.py  ddm_baseline.py  hybrid_config.py  hybrid_ddm_lstm.py  hybrid_model.py  hybrid_trainer.py  losses.py  ppo_baseline.py  sticky_q.py  synthetic_ddm.py  wfpt_loss.py
animaltasksim/: __init__.py  config.py  logging.py  registry.py  seeding.py  time_cost.py
animaltasksim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: README.md
docs/: THEORY_AND_CONCEPTS.md  about-the-agents-in-the-project.md  adaptive_control_agent_design.md  adaptive_control_exploration_probe_design.md  dms_memory_fingerprint_design.md  hybrid_agent_design.md  index.html  prl_transfer_design.md  prl_volatility_uncertainty_design.md
envs/: __init__.py  dms_match.py  ibl_2afc.py  prl_reversal.py  rdm_macaque.py  utils_timing.py
eval/: __init__.py  dashboard.py  metrics.py  report.py  schema_validator.py
scripts/: README.md  __init__.py  _figure_style.py  (+51 more)
(+46 files in other folders)
