[project]
name = "animaltasksim"
version = "0.1.0"
description = "Benchmarking suite for animal-style behavioral tasks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "AnimalTaskSim Contributors"}
]
license = {file = "LICENSE"}
dependencies = [
  "gymnasium>=0.28",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "torch>=2.1",
  "stable-baselines3>=2.3",
  "matplotlib>=3.8",
  "pydantic>=2.6",
  "tyro>=0.5.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["animaltasksim", "envs", "agents", "eval", "scripts"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
